# crystalfontz-emulator

./: .gitignore  README.md  cfui_demo.py  example.py  graphics_example.py  main.py  pyproject.toml  snake_example.py  snake_graphics_example.py  test_image.py
.claude/: settings.local.json
.serena/: project.yml
cfa835/: crc.py  device.py  font.py  gui.py  protocol.py  serial_interface.py
cfui/: __init__.py  _crc.py  _font.py  core.py  framebuffer.py  layout.py  pyproject.toml  storage.py  widget.py  widgets.py
